2011-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amidxtaped.pl: Do the uncompress if client can't do it.

2011-04-19  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: new changer error: empty.
	* perl/Amanda/Changer/robot.pm: return empty slot.
	* perl/Amanda/Taper/Scan/traditional.pm: Handle empty slot.

2011-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: Check generated label and meta-label.

2011-04-18  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amlabel.8.xml: Improve doc.
	* server-src/amlabel.pl: Remove spurious print.

2011-04-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Do not free find result string.
	* server-src/find.c: Use GStringChunk to store all find_dump string.

2011-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Use AMANDA_AS_NEEDED.
	* config/amanda/as_needed.m4: Add --as-needed, set AS_NEEDED_FLAGS.
	* client-src/Makefile.am, amandad-src/Makefile.am,
	  ndmp-src/Makefile.am, device-src/Makefile.am,
	  application-src/Makefile.am, xfer-src/Makefile.am,
	  server-src/Makefile.am, amar-src/Makefile.am,
	  common-src/Makefile.am: Add AS_NEEDED_FLAGS to many *_LDFLAGS.

2011-04-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/DB/Catalog.pm: Parse negative kb and orig-kb.
	* perl/Amanda/Logfile.swg: Do not write negative orig-kb.

2011-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Typo.

2011-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Interactivity.pm: Add documentation.

2011-04-06  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Fix Computation of data_lost on current and
	  next tape.

2011-04-01  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS, ReleaseNotes: Update for 3.3.0beta1.

2011-04-01  Jean-Louis Martineau <martineau@zmanda.com>
	* amplot/amplot.awk: Fix for new log format, fix small -t display,