@@ -1,3 +1,7 @@
+2011-04-20  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/planner.c: Improve balancing if some dle have strategy
+	  noinc or a smaller dumpcycle.
+
 2011-04-19  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amidxtaped.pl: Do the uncompress if client can't do it.
 
